# EditorGame

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
assets/ron/: assets.ron
src/: main.rs
src/lib/: assetloader.rs  components.rs  editorconfig.rs  editorvisibility.rs  history.rs  jscasting.rs
src/systems/: startup.rs  update.rs
src/wasm/: data.rs  definitions.rs
test/: Box.gltf
