[package]
name = "editorgame"
version = "0.1.0"
edition = "2024"

[features]
standard_dynamic_assets = ["dep:bevy_common_assets", "dep:serde"]

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_asset_loader = { version = "0.22.0" }
bevy_common_assets = { version = "0.12.0", optional = true, features = ["ron"] }
bevy_mesh = "0.15.3"
bevy_mod_outline = "0.9.1"
bevy_picking = "0.15.3"
bevy_rapier2d = { version = "0.29.0", features = ["simd-stable", "debug-render-2d"] }
bevy_spatial = "0.10.0"
bytemuck = "1.22.0"
gltf = "1.4.1"
image = "0.25.6"
rand = "0.9.0"
rfd = "0.15.3"
serde = { version = "1.0.219", optional = true }

[dev-dependencies]
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
serde = { version = "1" }
ron = { version = "0.9.0" }





# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3







# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
